--- a/teste/Properties/launchSettings.json
+++ b/teste/Properties/launchSettings.json
@@ -4,19 +4,19 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:61400",
-      "sslPort": 44392
+      "applicationUrl": "http://localhost:13926",
+      "sslPort": 44319
     }
   },
   "profiles": {
-    "ComandAppApi": {
+    "teste": {
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "http://localhost:5280",
+      "applicationUrl": "https://localhost:7060;http://localhost:5060",
       "dotnetRunMessages": true
     },
     "IIS Express": {
